--- a/src/components/Zone/Zone.module.scss
+++ b/src/components/Zone/Zone.module.scss
@@ -13,29 +13,42 @@
 }
 
 .zone {
-  padding: variables.$spacing-xs variables.$spacing-sm;
-  border-radius: variables.$border-radius-sm;
-  font-size: variables.$text-sm;
-  font-weight: variables.$font-semibold;
-  color: white;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: 600;
+  min-width: 24px;
+  height: 24px;
+  color: variables.$gray-900;
+  background-color: #f3f4f6;
+  border-radius: 4px;
+  padding: variables.$spacing-1 variables.$spacing-2;
+  border-radius: variables.$radius-sm;
+  text-transform: uppercase;
 }
 
 .zoneA {
   background-color: variables.$zone-a;
+  color: white;
 }
 
 .zoneB {
   background-color: variables.$zone-b;
+  color: white;
 }
 
 .zoneC {
   background-color: variables.$zone-c;
+  color: white;
 }
 
 .zoneD {
   background-color: variables.$zone-d;
+  color: white;
 }
 
 .zoneUnknown {
   background-color: variables.$zone-unknown;
+  color: white;
 } 
